2003-08-31 Ales Hvezda   <ahvezda@geda.seul.org>

	* pads_backannotate: Added Dan's documentation for the
	backannotation script (by Dan McMahill).

	* switcap/Makefile.am: Added missing *.ps to distribution

	* spice-sdb: Updated to Stuart's latest doc (split into multiple
	html files).  Thanks Stuart!

	* fileformats/fileformats.tex: Added valid version to version list

2003-08-30 Ales Hvezda   <ahvezda@geda.seul.org>

	* attributes/attributes.tex: Merged author= and email= together.
	Suggestion by Werner Hoch.

2003-08-24 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Improved the configuration summary message.

2003-07-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Renamed from configure.in

	* configure.ac: Minor tweeks to get this file up to snuff.
	
	* *.in, *.h, etc: Removed a bunch of old unneeded auto* files.
	
2003-05-25 Ales Hvezda   <ahvezda@geda.seul.org>

	* docs/symbols/symbols.tex: Added blurb about pin order (LSB to MSB)

	* configure.in: Applied Wojciech Kazubski's --with-docdir patch

2003-05-22 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.in: Updated version

2003-04-27 Ales Hvezda   <ahvezda@geda.seul.org>

 	* configure.in, Makefile.am, switcap/: Integrated Dan McMahill's 
	switcap backend (the docs). switcap is a new directory

	* fileformats/fileformats.tex: Updated valid versions

	* switcap/switcap.tex: Fixed a figure reference typo.  

	* toplevel/gedadocs.html: Added links to the switcap backend docs
	
	* Makefile.am, configure.in, spice-sdb/, toplevel/gedadocs.html: 
	Integrated  Stuart Brorson's advanced spice netlister (the docs)

	* switcap/Makefile.am, symbols/Makefile.am, attributes/Makefile.am,
	fileformats/Makefile.am: Added a "-" to some rm commands so that they
	would not fail (ignore errors)

2003-02-24 Ales Hvezda   <ahvezda@geda.seul.org>

	* fileformats/Makefile.am: Oops forgot to add eps and sch files
	to the EXTRA_DIST variable.

2003-02-23 Ales Hvezda   <ahvezda@geda.seul.org>
