@@ -10,6 +10,9 @@
 
 	* fileformats/fileformats.tex: Added valid version to version list
 
+	* */Makefile.am: Added a few - to some rm commands which are allowed
+	to fail.
+
 2003-08-30 Ales Hvezda   <ahvezda@geda.seul.org>
 
 	* attributes/attributes.tex: Merged author= and email= together.
